Create homepage block

--- a/assets/pug/index.pug
+++ b/assets/pug/index.pug
@@ -9,4 +9,5 @@ html(lang="en")
     link(rel="stylesheet", href="assets/css/google-fonts.css")
     title Agnecy Landing Page
   body.page
+    include ../blocks/homepage/homepage.pug
     script(src="assets/js/main.min.js") 
