--- a/assets/blocks/homepage/homepage.pug
+++ b/assets/blocks/homepage/homepage.pug
@@ -12,4 +12,6 @@ section.homepage
           p.homepage-info__text 
           button(type="submit") Contact Us
         .homepage-video
-          video(src="../assets/video/ALPS & DOLOMITES (Drone + Timelapse) Heavenly Nature Relaxation™ 5 Minute Short Film in 4K UHD.mp4") 
+          video#homepage-video(width="550" height="355" poster="../assets/images/dest/video-preview.jpg" controls)
+            source(src="../assets/video/ALPS & DOLOMITES (Drone + Timelapse) Heavenly Nature Relaxation™ 5 Minute Short Film in 4K UHD.mp4" type="video/mp4")
+
