--- a/assets/blocks/homepage/homepage.pug
+++ b/assets/blocks/homepage/homepage.pug
@@ -5,13 +5,12 @@ section.homepage
         ul.menu__list 
           each name in ['home', 'portfolio', 'about us', 'contact']
             li.menu__item
-              a(href=`${name}.html`)=name
+              a.menu__link(href=`${name}.html`)=name
       .homepage-wrap 
         .homepage-info 
-          h1.homepage-info__title 
-          p.homepage-info__text 
-          button(type="submit") Contact Us
-        .homepage-video
-          video#homepage-video(width="550" height="355" poster="../assets/images/dest/video-preview.jpg" controls)
+          h1.homepage-info__title our strong organaisation
+          p.homepage-info__text Lorem ipsum dolor, sit amet consectetur adipisicing elit. Veritatis ratione libero quis enim doloremque. Doloremque repellat eveniet numquam sequi autem, provident porro possimus error reiciendis optio!
+          button.btn.homepage-btn(type="submit") Contact Us
+        .homepage-video-container
+          video#homepage-video.homepage-video(width="550" height="355" poster="../assets/images/dest/video-preview.jpg" controls)
             source(src="../assets/video/ALPS & DOLOMITES (Drone + Timelapse) Heavenly Nature Relaxation™ 5 Minute Short Film in 4K UHD.mp4" type="video/mp4")
-
