--- a/assets/blocks/homepage/homepage.pug
+++ b/assets/blocks/homepage/homepage.pug
@@ -12,6 +12,6 @@ section.homepage
           p.homepage-info__text Lorem ipsum dolor, sit amet consectetur adipisicing elit. Veritatis ratione libero quis enim doloremque. Doloremque repellat eveniet numquam sequi autem, provident porro possimus error reiciendis optio!
           button.btn.homepage-btn(type="submit") Contact Us
         .homepage-video-container
-          video#homepage-video.homepage-video(width="550" height="355" poster="../assets/images/dest/video-preview.jpg")
-            source(src="../assets/video/ALPS & DOLOMITES (Drone + Timelapse) Heavenly Nature Relaxation™ 5 Minute Short Film in 4K UHD.mp4" type="video/mp4")
+          video#homepage-video.homepage-video(width="550" height="355" poster="assets/images/dest/video-preview.jpg")
+            source(src="assets/video/ALPS & DOLOMITES (Drone + Timelapse) Heavenly Nature Relaxation™ 5 Minute Short Film in 4K UHD.mp4" type="video/mp4")
           #play.homepage-video__play-btn
