--- a/assets/blocks/page/page.sass
+++ b/assets/blocks/page/page.sass
@@ -16,3 +16,8 @@ a
   border: none
   border-radius: 3px
   cursor: pointer
+
+@media (max-width: 576px)
+  .container
+    max-width: 100%
+    width: 100%
