--- a/assets/blocks/homepage/homepage.sass
+++ b/assets/blocks/homepage/homepage.sass
@@ -65,6 +65,8 @@
 .homepage-btn
   margin-top: 40px
 
+// Adaptivity //////////////////////
+
 @media (max-width: 1440px)
   .homepage-info
     &__title
