--- a/assets/blocks/homepage/homepage.sass
+++ b/assets/blocks/homepage/homepage.sass
@@ -1,7 +1,6 @@
 .menu
   background-color: #313030
   width: 100%
-  margin-top: 2%
   &__list
     display: flex
     flex-direction: row
@@ -65,6 +64,8 @@
 
 .homepage-btn
   margin-top: 40px
+
+// Adaptivity //////////////////////
 
 @media (max-width: 1440px)
   .homepage-info
