--- a/assets/blocks/page/page.sass
+++ b/assets/blocks/page/page.sass
@@ -17,6 +17,8 @@ a
   border-radius: 3px
   cursor: pointer
 
+// Adaptivity //////////////////////
+
 @media (max-width: 1000px)
   .container
     max-width: 100%
