--- a/assets/blocks/page/page.sass
+++ b/assets/blocks/page/page.sass
@@ -17,7 +17,7 @@ a
   border-radius: 3px
   cursor: pointer
 
-// Adaptivity //////////////////////
+// Adaptivity /////////////////////
 
 @media (max-width: 1000px)
   .container
