--- a/assets/pug/index.pug
+++ b/assets/pug/index.pug
@@ -9,5 +9,8 @@ html(lang="en")
     link(rel="stylesheet", href="assets/css/google-fonts.css")
     title Agnecy Landing Page
   body.page
+    include ../blocks/mixins/mixins.pug
     include ../blocks/homepage/homepage.pug
-    script(src="assets/js/main.min.js") 
+    include ../blocks/services/services.pug
+    script(src="assets/js/main.min.js")
+    script(src="https://kit.fontawesome.com/36446de779.js" crossorigin="anonymous") 
