--- a/assets/blocks/services/services.sass
+++ b/assets/blocks/services/services.sass
@@ -5,21 +5,19 @@
   display: flex
   flex-direction: row
   flex-wrap: wrap
+  justify-content: space-between
 
 .services-info
   width: 49%
   &__title
-    font-family: "OpenSans", sans-serif
-    font-size: 42px
-    font-weight: 600
-    text-transform: uppercase
-    color: #585858
+    @extend %h2-title
   &__text
     font-family: "OpenSans", sans-serif
     font-size: 16px
     color: #585858
     margin-top: 20px
     line-height: 1.5em
+    padding-right: 20%
 
 .service-btn
   background-color: #fff
@@ -34,9 +32,14 @@
 .fas
   font-size: 34px
   color: #ff2d2d
+  padding-top: 30px
 
 .service__title
   font-family: "Times New Romance", sans-serif
   font-size: 24px
   color: #737373
+  padding-top: 30px
+
+.service__text
+  padding-top: 30px
 
