--- a/assets/sass/main.sass
+++ b/assets/sass/main.sass
@@ -1,3 +1,4 @@
+@import ../blocks/templates/templates.sass
 @import ../blocks/page/page.sass
 @import ../blocks/homepage/homepage.sass
 @import ../blocks/services/services.sass
