--- a/assets/blocks/services/services.sass
+++ b/assets/blocks/services/services.sass
@@ -27,19 +27,25 @@
   margin-top: 40px
 
 .services-list 
+  display: grid
+  grid-template-columns: 50% 50%
+  column-gap: 60px
+  row-gap: 60px
   width: 49%
 
+.service-box
+  grid-column: span 1
 .fas
   font-size: 34px
   color: #ff2d2d
-  padding-top: 30px
 
 .service__title
   font-family: "Times New Romance", sans-serif
   font-size: 24px
   color: #737373
-  padding-top: 30px
+  padding-top: 25px
 
 .service__text
-  padding-top: 30px
+  padding-top: 20px
+  line-height: 1.5em
 
