--- a/assets/blocks/homepage/homepage.sass
+++ b/assets/blocks/homepage/homepage.sass
@@ -37,7 +37,7 @@
     font-family: "OpenSans", sans-serif
     font-size: 16px
     color: #6f6d6d
-    line-height: 1.8em
+    line-height: 1.6em
     width: 80%
 
 .homepage-video-container
@@ -82,15 +82,16 @@
     flex-direction: column
     justify-content: center
     &__title
-      font-size: 18px
+      font-size: 24px
       margin-top: 20px
       text-align: center
       padding: 0
     &__text
-      font-size: 14px
+      font-size: 16px
       text-align: center
       width: 100%
       margin-top: 10px
+      color: #585858
 
   .homepage-video-container
     position: relative
@@ -118,7 +119,7 @@
       padding: 20px 10px 15px 10px
   .homepage-info
     &__title
-      font-size: 14px
+      font-size: 18px
 
 @media (max-width: 330px)
   .menu
