--- a/assets/pug/index.pug
+++ b/assets/pug/index.pug
@@ -10,4 +10,5 @@ html(lang="en")
     title Agnecy Landing Page
   body.page
     include ../blocks/homepage/homepage.pug
+    include ../blocks/products/products.pug
     script(src="assets/js/main.min.js") 
