--- a/assets/pug/index.pug
+++ b/assets/pug/index.pug
@@ -11,11 +11,8 @@ html(lang="en")
   body.page
     include ../blocks/mixins/mixins.pug
     include ../blocks/homepage/homepage.pug
-<<<<<<< HEAD
     include ../blocks/services/services.pug
+    include ../blocks/products/products.pug
+    include ../blocks/team/team.pug
     script(src="assets/js/main.min.js")
     script(src="https://kit.fontawesome.com/36446de779.js" crossorigin="anonymous") 
-=======
-    include ../blocks/products/products.pug
-    script(src="assets/js/main.min.js") 
->>>>>>> products
