--- a/assets/sass/main.sass
+++ b/assets/sass/main.sass
@@ -1,8 +1,7 @@
 @import ../blocks/templates/templates.sass
 @import ../blocks/page/page.sass
 @import ../blocks/homepage/homepage.sass
-<<<<<<< HEAD
 @import ../blocks/services/services.sass
-=======
 @import ../blocks/products/products.sass
->>>>>>> products
+@import ../blocks/products/products-anim.sass
+@import ../blocks/team/team.sass
