--- a/assets/blocks/services/services.sass
+++ b/assets/blocks/services/services.sass
@@ -1,5 +1,5 @@
 .services 
-  margin-top: 120px
+  margin-top: 100px
 
 .services-container 
   display: flex
@@ -14,7 +14,7 @@
   &__text
     font-family: "OpenSans", sans-serif
     font-size: 16px
-    color: #585858
+    color: #707070
     margin-top: 20px
     line-height: 1.5em
     padding-right: 20%
@@ -48,9 +48,14 @@
 .service__text
   padding-top: 20px
   line-height: 1.5em
-  color: #585858
+  color: #707070
 
 // Adaptivity
+
+@media (max-width: 1440px)
+  .services-info__title
+    font-size: 24px
+    padding-right: 50px
 
 @media (max-width: 1000px)
   .services
