--- a/assets/blocks/team/team.pug
+++ b/assets/blocks/team/team.pug
@@ -3,15 +3,27 @@ section.team
     .team-container 
       .team-wrap 
         h2.team__title Meet our team
-        p.team__text Lorem ipsum dolor sit amet, consectetur adipis cing elit, sed dooing eiusmod tempor incididut labore Ui / Ux , print template.
+        p.team__text Lorem ipsum dolor sit amet, consectetur adipis cing elit, sed dooing eiusmod tempor incididut labore Ui / Ux , print template. Lorem ipsum dolor, sit amet consectetur adipisicing elit.
       .team-list
-        .team-worker-pic
-        .team-worker-info 
-          .team-worker-info__title 
-          .team-worker-info__text 
-          .team-worker-info__social-links
+        .team-leader-photo
+        .team-leader-info 
+          .team-leader__title mark waugh
+          .team-leader__text Lorem, ipsum dolor sit amet consectetur adipisicing elit. Corporis placeat eaque saepe odit ducimus.
+          .team-leader-links
+            a.team-leader__link(href="#") Facebook
+            a.team-leader__link(href="#") Dribble
+            a.team-leader__link(href="#") Behance
+            a.team-leader__link(href="#") Twitter
         .team-workers
-          .team-workers__box
-          .team-workers__box
-          .team-workers__box
-          .team-workers__box
+          .team-worker__box
+            .team-worker__pic
+              .team-worker__text.team-worker__text_overlay sokina jue
+          .team-worker__box
+            .team-worker__pic
+              .team-worker__text.team-worker__text_overlay jester ronch
+          .team-worker__box
+            .team-worker__pic
+              .team-worker__text.team-worker__text_overlay lili amber
+          .team-worker__box
+            .team-worker__pic
+              .team-worker__text.team-worker__text_overlay jack armstrong
