--- a/assets/blocks/templates/templates.sass
+++ b/assets/blocks/templates/templates.sass
@@ -5,3 +5,19 @@
   text-transform: uppercase
   color: #585858
   line-height: 1.3em
+
+%text
+  font-size: 16px
+  text-align: center
+  width: 100%
+  margin-top: 10px
+  color: #707070
+
+%red-underline
+  display: block
+  content: ""
+  border: 1px solid #ff2d2d 
+  width: 20%
+  margin-top: 30px
+
+$color-grey: #585858 !global
