--- a/assets/blocks/homepage/homepage.sass
+++ b/assets/blocks/homepage/homepage.sass
@@ -36,7 +36,7 @@
   &__text
     font-family: "OpenSans", sans-serif
     font-size: 16px
-    color: #6f6d6d
+    color: #707070
     line-height: 1.6em
     width: 80%
 
