--- a/assets/blocks/services/services.sass
+++ b/assets/blocks/services/services.sass
@@ -46,6 +46,8 @@
   padding-top: 25px
 
 .service__text
+  @extend %text
+  text-align: left
   padding-top: 20px
   line-height: 1.5em
   color: #707070
