--- a/assets/blocks/templates/templates.sass
+++ b/assets/blocks/templates/templates.sass
@@ -7,6 +7,7 @@
   line-height: 1.3em
 
 %text
+  font-family: "OpenSans", sans-serif
   font-size: 16px
   text-align: center
   width: 100%
@@ -19,5 +20,16 @@
   border: 1px solid #ff2d2d 
   width: 20%
   margin-top: 30px
+
+%btn
+  font-family: "OpenSans", sans-serif
+  font-size: 18px
+  font-weight: 500
+  color: #fff
+  background-color: #ff2d2d
+  padding: 12px 50px
+  border: none
+  border-radius: 3px
+  cursor: pointer
 
 $color-grey: #585858 !global
