--- a/assets/pug/index.pug
+++ b/assets/pug/index.pug
@@ -14,5 +14,6 @@ html(lang="en")
     include ../blocks/services/services.pug
     include ../blocks/products/products.pug
     include ../blocks/team/team.pug
+    include ../blocks/subscribe/subscribe.pug
     script(src="assets/js/main.min.js")
     script(src="https://kit.fontawesome.com/36446de779.js" crossorigin="anonymous") 
