--- a/assets/sass/main.sass
+++ b/assets/sass/main.sass
@@ -5,3 +5,4 @@
 @import ../blocks/products/products.sass
 @import ../blocks/products/products-anim.sass
 @import ../blocks/team/team.sass
+@import ../blocks/subscribe/subscribe.sass
