--- a/assets/blocks/products/products.sass
+++ b/assets/blocks/products/products.sass
@@ -23,6 +23,7 @@
       display: flex
       flex-direction: row
       justify-content: space-evenly
+      row-gap: 10px
       user-select: none
     &__item,
     &__link
@@ -90,6 +91,7 @@
     background: url(../images/dest/camera.jpg) no-repeat
     background-position: 50% 50%
     background-size: 120%
+
 // Adaptivity
 
 @media (max-width: 1440px)
@@ -102,7 +104,6 @@
       &__link
         font-size: 16px
         
-@media (max-width: 1000px)
   
 @media (max-width: 768px)
   .products
@@ -114,6 +115,21 @@
       &__item,
       &__link
         font-size: 14px
+
+@media (max-width: 500px)
+  .products__list
+    .products
+      &__list
+        justify-content: center
+      &__item
+        padding: 0
+        text-align: center
+        display: grid
+        align-content: center
+      &__link
+        font-size: 14px
+        padding: 0
+
 @media (max-width: 330px)
   .products
     &__list
