--- a/assets/sass/main.sass
+++ b/assets/sass/main.sass
@@ -6,3 +6,4 @@
 @import ../blocks/products/products-anim.sass
 @import ../blocks/team/team.sass
 @import ../blocks/subscribe/subscribe.sass
+@import ../blocks/contacts/contancs.sass
