--- a/assets/blocks/subscribe/subscribe.sass
+++ b/assets/blocks/subscribe/subscribe.sass
@@ -40,11 +40,7 @@
   justify-content: center
   margin-top: 40px
   &__input
-    font-size: 16px
-    padding: 15px 25px
-    color: #424242
-    border-radius: 3px
-    border: none
+    @extend %input
     width: 40%
   &__btn
     @extend %btn
