--- a/assets/blocks/templates/templates.sass
+++ b/assets/blocks/templates/templates.sass
@@ -32,4 +32,12 @@
   border-radius: 3px
   cursor: pointer
 
+%input
+  font-family: "OpenSans", sans-serif
+  font-size: 16px
+  padding: 15px 25px
+  color: #363636
+  border-radius: 3px
+  border: none
+
 $color-grey: #585858 !global
