--- a/assets/sass/main.sass
+++ b/assets/sass/main.sass
@@ -7,3 +7,4 @@
 @import ../blocks/team/team.sass
 @import ../blocks/subscribe/subscribe.sass
 @import ../blocks/contacts/contancs.sass
+@import ../blocks/footer/footer.sass
