Low resolution adaptivity fixes

--- a/assets/blocks/contacts/contancs.sass
+++ b/assets/blocks/contacts/contancs.sass
@@ -42,7 +42,7 @@
   &__btn
     @extend %btn
     text-transform: uppercase
-    margin-top: 15px
+    margin: 25px 0
 
 .contact-info
   background-color: #2d2d2d
