--- a/assets/blocks/footer/footer.pug
+++ b/assets/blocks/footer/footer.pug
@@ -4,6 +4,10 @@ footer.footer
       p.footer-copyrights &copy; Copyright @Junaed 2016, All rights reserved
       .footer-social
         .icon
+          a.icon__link(href="#") 
         .icon
+          a.icon__link(href="#") 
         .icon
+          a.icon__link(href="#") 
         .icon
+          a.icon__link(href="#") 
