--- a/assets/blocks/footer/footer.sass
+++ b/assets/blocks/footer/footer.sass
@@ -19,6 +19,7 @@
   margin-right: 90px
 .icon
   padding: 0 10px
+  cursor: pointer
 
 .icon::before
   font-family: FontAwesome
@@ -36,7 +37,9 @@
 // Adaptivity
 
 @media (max-width: 800px)
-
+  .footer
+    margin-top: 0
+    
   .footer-copyrights
     margin-left: 5px
     font-size: 10px
