--- a/assets/blocks/team/team.sass
+++ b/assets/blocks/team/team.sass
@@ -28,6 +28,7 @@
   background-size: 100%
   grid-column: 1 / 5
   grid-row: span 2
+  margin-left: 60px
 
 .team-leader-info
   grid-column: 5 / 12
@@ -115,6 +116,9 @@
   .team-leader-photo
     width: 300px
     height: 370px
+    margin-left: 15px
+  .team-leader-info
+    margin-left: 20px
   
   .team-workers
     .team-worker__box,
@@ -129,10 +133,13 @@
   .team-leader-photo
     width: 250px
     height: 320px
-  
+    margin-left: 15px
+
   .team-leader-info
     grid-column: 5 / 12
     grid-row: span 2
+    width: 60%
+    margin-left: 50px
 
   .team-workers
     grid-column: 1 / 12
@@ -159,6 +166,10 @@
   .team-leader-photo
     width: 200px
     height: 270px
+    margin-left: 15px
+  .team-leader-info
+    width: 60%
+    margin-left: 50px
 
 @media (max-width: 650px)
   .team-leader-photo
@@ -191,5 +202,8 @@
     width: 100px
     height: 170px
 
-  .team-leader__title 
-    font-size: 20px
+  .team-leader-info
+    width: 80%
+    margin-left: 30px
+    .team-leader__title 
+      font-size: 20px
