--- a/assets/blocks/products/products.sass
+++ b/assets/blocks/products/products.sass
@@ -103,20 +103,7 @@
       &__item,
       &__link
         font-size: 16px
-        
-  
-@media (max-width: 768px)
-  .products
-    margin-top: 80px
-    &__text
-      width: 100%
-  .products-portfolio
-    .products
-      &__item,
-      &__link
-        font-size: 14px
 
-@media (max-width: 500px)
   .products__list
     .products
       &__list
@@ -129,7 +116,23 @@
       &__link
         font-size: 14px
         padding: 0
+        
+@media (max-width: 768px)
+  .products
+    margin-top: 80px
+    &__text
+      width: 100%
+  .products-portfolio
+    .products
+      &__item,
+      &__link
+        font-size: 14px
 
+@media (max-width: 450px)
+  .products-portfolio
+    .products
+      &__list
+        flex-wrap: wrap
 @media (max-width: 330px)
   .products
     &__list
