--- a/assets/blocks/products/products.sass
+++ b/assets/blocks/products/products.sass
@@ -128,11 +128,20 @@
       &__link
         font-size: 14px
 
+@media (max-width: 500px)
+  .products__list
+    .products
+      &__item
+        padding: 0 15px
+
 @media (max-width: 450px)
   .products-portfolio
     .products
       &__list
         flex-wrap: wrap
+      &__item
+        padding: 0 15px
+
 @media (max-width: 330px)
   .products
     &__list
